package com.example.dat1_ice_drinkinggame;

public class Card {

    private final String challenge;
    private final int sips;

    public Card(String challenge, int sips) {
        this.challenge = challenge;
        this.sips = sips;
    }

    public String getChallenge() {
        return challenge;
    }

    public int getSips() {
        return sips;
    }
}
